# FedAlgo

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  build.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
benchmarks/: batched.py  block_diag.py  block_diag_vs_vmap.py  gwasprs_blocked.py  gwasprs_blocked_jax.py  jax.py
data/test_bfile/: hapmap1_100_2.cov
docs/: .secret.md
docs/source/: conf.py  index.rst
examples/: batch_on_axes.py  federated_linear_regression.py  federated_pca_comparison.py
fedalgo/gwasprs/: gwasplot.py
federatedprs/: __init__.py  basic_qc.py  regression.py  stats.py
federatedprs/io/: loader.py  utils.py
federatedprs/qc/: config.py  lib_qc.py  qc.py  utils.py
gwasprs/: __init__.py  aggregations.py  array.py  block.py  gwasdata.py  gwasplot.py  hwe.py  iterator.py  linalg.py  loader.py  mask.py  project.py  qc.py  reader.py  regression.py  setup.py  stats.py  utils.py  vectorize.py
scripts/: build_docs.sh  compile_plink_hwp.sh  install_plink2.sh
test/: main.py  regression.py  stats.py  test_aggregations.py  test_array.py  test_block.py  test_gwasdata.py  test_gwasplot.py  test_io.py  test_iterator.py  test_ld.py  test_linalg.py  test_loader.py  test_qc.py  test_reader.py  test_regression.py  test_stats.py
