[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gwasprs"
version = "0.12.0"

authors = [
    { name="Yueh-Hua Tu", email="yuehhua.tu@ailabs.tw" },
    { name="Yi-Lun Lee", email="yilun.lee@ailabs.tw" },
    { name="Jian-Hung Wen", email="jianhung.wen@ailabs.tw"},
]

description = "A GWAS-PRS package for supporting federated analysis"

requires-python = ">=3.8"

classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]

dependencies = [
  'numpy >= 1, < 2',
  'scipy >= 1, < 2',
  'jax >= 0.4, < 0.5',
  'pooch >= 1, < 2',
  'bed_reader >= 0.2, < 0.3',
  'polars >= 0.18, < 0.19',
  'ordered_set >= 4, < 5',
]

[tool.setuptools.packages]
find = {}
