[build-system]
requires = ["poetry-core", "setuptools>=61.0", "setuptools-cpp"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gwasprs"
version = "0.19.3"

authors = [
    "Yueh-Hua Tu <yuehhua.tu@ailabs.tw>",
    "Yi-Lun Lee <yilun.lee@ailabs.tw>",
    "Jian-Hung Wen <jianhung.wen@ailabs.tw>",
]

description = "A GWAS-PRS package for supporting federated analysis"
readme = "README.md"

classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]

include = ["externals"]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = [
    {version = "~1", python = ">=3.8,<3.12"},
]
scipy = [
    {version = "~1", python = ">=3.8,<3.12"},
]
jax = "~0.4"
jaxlib = "^0.4"
pooch = "~1"
bed_reader = "~0.2"
pandas = "^2"
ordered_set = "~4"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
pytest = "^7.4"

[tool.poetry.group.benchmark]

[tool.poetry.group.benchmark.dependencies]
pyperf = "^2"

[tool.poetry.group.doc]

[tool.poetry.group.doc.dependencies]
sphinx = "^6.2"
myst-parser = "^2.0"

[tool.poetry.group.packaging]

[tool.poetry.group.packaging.dependencies]
build = "~1"

[tool.poetry.group.publishing]

[tool.poetry.group.publishing.dependencies]
twine = "~4"
